# relais

./: .gitignore  ARCHITECTURE.md  README.md  pipeline.context  pyproject.toml  pytest.ini
MagicMock/mock.db_path.replace()/: 139771775978816  139771776797584  139798748508816  139798748700000  139798749304768  139798750448720  139798751106576  139804935248624  139804935886544  139804937598448  139804937620608  139804938188224  139813837419152  139813837861184  139813837996688  139813838068944  139813838362080  139813840597552  139910769387392  139910769392528  139910769435824  139910769822656  139910776076960  139927439689536  139927439944608  139927440605936  139927441124160  139927441430608  139927450608144  140051632176496  140051632555360  140051632755520  140079255462032  140079256062864  140091263018064  140091263474272  140091263489696  140091263601696  140091263663184  140143566218704  (+40 more)
docs/: conversations.md
examples/: config.py  pipeline.db
examples/hooks/: __init__.py  current_time.py  system_status.py  user_preferences.py
examples/instructions/: analyze.md  answer_question.md  chat.md  greet.md  perform_task.md  research.md  summarize.md
examples/pipelines/: __init__.py  hooks_pipeline.py  research.py  routing.py  simple_greeting.py
examples/tools/: __init__.py  answer.py  chat.py  classify.py  contextual_greeting.py  execute_task.py  greeting.py  search.py  status_report.py  summary.py
src/relais/: __init__.py  agent.py  agent_state.py  conversation.py  executor.py  logging_config.py  pipeline.py  router.py  (+4 more)
tests/: __init__.py  conftest.py
(+15 files in other folders)
